basic list of movies working

--- a/main.css
+++ b/main.css
@@ -1,32 +1,22 @@
 
 html {
-    /* background-color: black; */
+    background-color: #2A363B;
 }
 
 .container {
-    border: 1px solid;
     display: flex;
     flex-wrap: wrap; 
-    border: 1px solid;
-    border-color: red;
     justify-content: center;
-
+    column-gap: 10px;
+    row-gap: 15px;
 }
 
 .item{
-    border: 1px solid;
-    border-color: green;
     flex-grow: 1;  
-    /* width: 474px; */
-    /* height: 40vh; */
 }
 
-/* .title {
-    width: 128px;
+.title {
     color: white;
-} */
-
-img {
-    /* max-width: 100%; */
-    min-width: 100%;
+    width: 190; 
+    height: 270;
 }
