--- a/main.css
+++ b/main.css
@@ -1,58 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,400;0,500;0,600;0,700;1,100&display=swap');
+* { 
+    box-sizing: border-box;
+} 
 
-html {
-    /* background-color: #2A363B; */
-    background-color: #181818;
-    font-family: 'Oswald', sans-serif;
-    font-size: 16px;
+body {
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+    font-family: 'Barlow', sans-serif;
+    background-color: #DED9D0;
 }
 
-.container {
+img { 
+    max-width: 100%;
+}
+
+h1,h2,h3,p,ul {
+    padding: 0;
+    margin: 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.container { 
     display: flex;
-    flex-wrap: wrap; 
-    justify-content: center;
-    column-gap: 10px;
-    row-gap: 15px;
 }
 
-@keyframes slide-in {
- from {
-      transform: translateY(-150%);
-    }
-    to {
-      transform: translateY(0%);
-    }
+.movie {
+    width: 16rem;
+    display: flex;
+    flex-direction: column;
 }
 
-.item{
-    animation: slide-in 1500ms;
-    animation-timing-function: ease-out;
+.movie__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.item:hover{
-    animation-name: example;
-    animation-duration: 0.25s;
+.movie__title {
+    text-transform: uppercase;
 }
 
-@keyframes example {
-    0%   {border-left: 2px solid #ffffff;}
-    25%  {border-left: 3px solid #ffe6e6;}
-    50%  {border-left: 4px solid #ff8080;}
-    100% {border-left: 5px solid #ff0000;}
-}
-
-.medium {
-    font-size: 36px;
-    color:#FEDD2F;
-}
-
-.large {
-    font-size: 72px;
-    color:#FEDD2F;
-}
-
-.title {
+.movie__year {
+    background-color: #222;
+    padding: 0 0.1rem;
     color: white;
-    max-width: 190; 
-    height: 270;
-    font-size: 18px;
 }
+
+.movie__details{
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    font-weight: 200;
+}
+
+.movie__running, .movie__director, .movie__tag {
+    font-weight: 400;
+}
+
+
