--- a/main.css
+++ b/main.css
@@ -7,13 +7,14 @@ body {
     padding: 0;
     margin: 0;
     height: 100vh;
-    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     font-family: 'Barlow', sans-serif;
-    background-color: #DED9D0;
+    background-color: #dad7cd;
 }
 
 img { 
     max-width: 100%;
+    aspect-ratio: 1 /1 ;
+    object-fit: cover;
 }
 
 h1,h2,h3,p,ul {
@@ -25,12 +26,20 @@ ul {
     list-style-type: none;
 }
 
+.underline {
+    text-decoration: underline;
+}
 .container { 
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    column-gap: 0.4rem;
+    row-gap: 0.5rem;
+    padding: 2rem;
 }
 
 .movie {
-    width: 16rem;
+    width: 13rem;
     display: flex;
     flex-direction: column;
 }
@@ -54,7 +63,7 @@ ul {
 .movie__details{
     display: flex;
     justify-content: space-between;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     font-weight: 200;
 }
 
