--- a/main.css
+++ b/main.css
@@ -15,12 +15,14 @@ img {
     max-width: 100%;
     aspect-ratio: 1 /1 ;
     object-fit: cover;
+    clip-path: polygon(8% 0, 100% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
 }
 
 h1,h2,h3,p,ul {
     padding: 0;
     margin: 0;
 }
+
 
 ul {
     list-style-type: none;
@@ -29,6 +31,7 @@ ul {
 .underline {
     text-decoration: underline;
 }
+
 .container { 
     display: flex;
     flex-wrap: wrap;
@@ -44,9 +47,18 @@ ul {
     flex-direction: column;
 }
 
+.begin{
+    border-top: 4px solid #222;
+    padding-top: 2rem;
+}
+
+.end {
+    border-bottom: 4px solid #222;
+}
+
 .movie__header {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
 }
 
@@ -55,8 +67,9 @@ ul {
 }
 
 .movie__year {
+    font-size: 0.8rem;
     background-color: #222;
-    padding: 0 0.1rem;
+    padding: 0.45rem 0.1rem;
     color: white;
 }
 
