--- a/main.css
+++ b/main.css
@@ -23,11 +23,17 @@ h1,h2,h3,p,ul {
     padding: 0;
     margin: 0;
 }
+
 h1,h2,h3 {
     line-height: 1.3rem;
 }
+
 ul {
     list-style-type: none;
+}
+
+li {
+    line-height: 0.7rem;
 }
 
 .underline {
@@ -38,8 +44,8 @@ ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    column-gap: 0.4rem;
-    row-gap: 0.5rem;
+    column-gap: 0.2rem;
+    row-gap: 0.7rem;
     padding: 2rem;
 }
 
@@ -56,6 +62,12 @@ ul {
 
 .end {
     border-bottom: 4px solid #222;
+}
+
+.movie__informations {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
 }
 
 .movie__header {
