--- a/main.css
+++ b/main.css
@@ -9,7 +9,6 @@ body {
     height: 100vh;
     font-family: 'Barlow', sans-serif;
     background-color: #dad7cd;
-    /* background-color: #C4C0B0; */
 }
 
 img { 
@@ -49,6 +48,19 @@ li {
     padding: 2rem;
 }
 
+.about {
+    position: absolute;
+    bottom: 1rem;
+    right: 0rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    border: 3px solid black; 
+    line-height: 1;
+    text-align: center;
+    background-color: #222;
+    color: white;
+}
+
 .movie {
     flex-basis: 13rem;
     display: flex;
@@ -56,8 +68,49 @@ li {
 }
 
 .begin{
-    border-top: 4px solid #222;
-    padding-top: 2rem;
+    border-top: 2px solid #222;
+    position: relative;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+}
+
+.pres {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-bottom: -1.5rem;
+}
+
+.small {
+    font-size: 1rem;
+}
+
+.bottom {
+    text-align: right;
+}
+
+.letter {
+    font-size: 6rem;
+    writing-mode: sideways-rl;
+    font-weight:700;
+    text-transform: uppercase;
+    line-height: 0.8;
+}
+
+.follow {
+    font-size: 2.5rem;
+    font-weight:500;
+    line-height: 2rem;
+    font-weight: 600;
+}
+
+.w {
+    align-self: flex-end;
+}
+
+.title {
 }
 
 .end {
@@ -99,3 +152,4 @@ li {
 .movie__running, .movie__director, .movie__tag {
     font-weight: 400;
 }
+
