--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,400;0,500;0,600;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 * { 
     box-sizing: border-box;
 } 
@@ -8,13 +9,12 @@ body {
     margin: 0;
     height: 100vh;
     font-family: 'Barlow', sans-serif;
-    /* background-color: #dad7cd; */
     background-color: #151515;
     color: #EBDBC2;
 }
 
 img { 
-    max-width: 100%;
+    width: 100%;
     aspect-ratio: 1 /1 ;
     object-fit: cover;
     clip-path: polygon(8% 0, 100% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
@@ -25,10 +25,6 @@ h1,h2,h3,p,ul {
     margin: 0;
 }
 
-h1,h2,h3 {
-    line-height: 1.3rem;
-}
-
 ul {
     list-style-type: none;
 }
@@ -37,17 +33,14 @@ li {
     line-height: 0.7rem;
 }
 
-.underline {
-    text-decoration: underline;
-}
-
 .container { 
-    display: flex;
+    width: 98%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(13rem,1fr));
     flex-wrap: wrap;
     justify-content: space-between;
-    column-gap: 0.2rem;
-    row-gap: 0.7rem;
-    padding: 2rem;
+    gap: 0.5rem;
 }
 
 .about {
@@ -59,17 +52,10 @@ li {
     border: 2px solid #F4533F;
     line-height: 1;
     text-align: center;
-    /* background-color: #222; */
     background-color: #151515;
     color: #EBDBC2;
-    /* color: white; */
 }
 
-.movie {
-    flex-basis: 13rem;
-    display: flex;
-    flex-direction: column;
-}
 
 .begin{
     border-top: 2px solid #222;
@@ -120,42 +106,39 @@ li {
     border-bottom: 4px solid #222;
 }
 
-.movie__informations {
-    display: flex;
-    flex-direction: column;
-    gap: 0.2rem;
-}
-
 .movie__header {
     display: flex;
     align-items: stretch;
     justify-content: space-between;
-    gap: 0.2rem;
+    padding-top: 0.1rem;
 }
 
 .movie__title {
+    line-height: 1.3rem;
     text-transform: uppercase;
-    padding-top: 0.1rem;
     color: #F4533F;
 }
 
 .movie__year {
     font-size: 0.7rem;
-    /* background-color: #222; */
-    padding: 0.4rem 0.1rem 0; 
-    /* border: 1px solid #F4533F; */
-    /* color: #F4533F; */
-    text-align: center;
+    font-weight: 500;
+    /* padding: 0.4rem 0.1rem 0;  */
 }
 
 .movie__details{
-    display: flex;
-    justify-content: space-between;
+    padding-top: 0.2rem;
     font-size: 0.7rem;
-    font-weight: 200;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 .movie__running, .movie__director, .movie__tag {
-    font-weight: 400;
+    font-weight: 500;
 }
+
+.end {
+    color: #F4533F;
+    align-self: end;
+}
+
 
