--- a/main.css
+++ b/main.css
@@ -37,70 +37,72 @@ li {
     width: 98%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(13rem,1fr));
-    flex-wrap: wrap;
-    justify-content: space-between;
+    grid-template-columns: repeat(auto-fit, minmax(13.5rem,1fr));
     gap: 0.5rem;
 }
 
 .about {
-    position: absolute;
-    bottom: 1rem;
-    right: 0rem;
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 3rem;
+    height: 3rem;
+    padding: 0.3rem;
     border: 2px solid #F4533F;
     line-height: 1;
     text-align: center;
-    background-color: #151515;
     color: #EBDBC2;
+    align-self: center;
+    justify-self: end;
 }
 
-
-.begin{
-    border-top: 2px solid #222;
-    position: relative;
+.hero{
     color: #F4533F;
-}
-
-.row {
-    display: flex;
-    align-items: center;
-}
-
-.pres {
-    font-size: 1.5rem;
+    display: grid;
+    grid-template-columns: max-content max-content  1fr;
+    /* grid-auto-rows: 0px; */
     font-weight: 500;
-    margin-bottom: -1.5rem;
 }
 
 .small {
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
-.bottom {
-    text-align: right;
+.intro1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    /* line-height: 1.2; */
+} 
+
+.intro2 {
+    grid-row: 2 / 3;
+    grid-column: 2 / 4;
 }
 
 .letter {
-    font-size: 6rem;
-    writing-mode: sideways-rl;
+    font-size: 6.7rem;
     font-weight:700;
+    writing-mode: sideways-rl;
     text-transform: uppercase;
+    grid-column: 1 / 2;
     line-height: 0.8;
+}
+
+.hero > .letter:nth-of-type(1){
+    grid-row: 2 / 4;
 }
 
 .follow {
     font-size: 2.5rem;
     font-weight:500;
-    line-height: 2rem;
     font-weight: 600;
+    grid-column: 2 / 3;
 }
 
-.w {
-    align-self: flex-end;
+.hero > .follow:nth-of-type(1){
+    grid-row: 3 / 4;
 }
 
+/* .hero .follow:nth-of-type(3){
+    grid-row: 4 / 5;
+} */
 
 .end {
     border-bottom: 4px solid #222;
@@ -136,6 +138,7 @@ li {
 }
 
 .end {
+    display: grid;
     color: #F4533F;
     align-self: end;
 }
