--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ li {
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(13.5rem,1fr));
-    gap: 0.5rem;
+    gap: 0.8rem;
 }
 
 .about {
@@ -59,21 +59,13 @@ li {
     display: grid;
     grid-template-columns: max-content max-content  1fr;
     font-weight: 500;
+    align-items: center;
 }
 
 .small {
     font-size: 0.8rem;
 }
 
-.intro1 {
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-} 
-
-.intro2 {
-    grid-row: 2 / 3;
-    grid-column: 2 / 4;
-}
 
 .letter {
     font-size: 6.7rem;
@@ -84,19 +76,11 @@ li {
     line-height: 0.8;
 }
 
-.hero > .letter:nth-of-type(1){
-    grid-row: 2 / 4;
-}
-
 .follow {
     font-size: 2.5rem;
     font-weight:500;
     font-weight: 600;
     grid-column: 2 / 3;
-}
-
-.hero > .follow:nth-of-type(1){
-    grid-row: 3 / 4;
 }
 
 .end {
@@ -139,23 +123,64 @@ li {
 }
 
 
-@media (max-width: 448px) {
+@media (max-width: 460px) {
 
-    .container {
-        padding-top: 15px;
-        width: 96%;
-        margin: 0 auto;
-        row-gap: 2rem;
-    }
+  .letter {
+    font-size: 5rem;
+  }
 
-    .about {
-        width: 100%;       
-        padding: 0;
-        text-transform: uppercase;
-        background-color: #F4533F;
-        color: #151515;
-        font-weight: 700;
-        font-size: 1.5rem;
-    }
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    aspect-ratio: unset;
+    clip-path: unset;
+  }
+
+
+  .container {
+      padding-top: 10px;
+      grid-auto-rows: 230px;
+      gap: 0rem;
+    /* padding: 0 10px 10px 10px; */
+  }
+
+  .hero {
+    padding: 0px 10px 10px 10px;
+  }
+
+  .movie {
+    position: relative;
+  }
+ 
+  .movie__informations {
+    width: 100%;
+  }
+
+  .movie__header{
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .movie__year {
+    font-size: 0.8rem;
+  }
+
+  .movie::after {
+    position: absolute;
+    display: block;
+    bottom: 0;
+    content: '';
+    width: 100%;
+    height: 80%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, .6) 50%, rgba(255, 255 ,255 , 0) 100%);
+  }
+
+  .movie__informations {
+    padding: 10px;
+    position: absolute; 
+    bottom: 20;
+    z-index: 1000;
+  }
 
 }
