--- a/movie.mustache
+++ b/movie.mustache
@@ -1,5 +1,5 @@
 <div class="movie">
-    <img class="movie_img" src="{{thumbPath}}" alt="movie picture" />
+    <img class="movie_img" src="{{thumbPath}}" alt="movie picture"/>
     <div class="movie__informations">
         <div class="movie__header">
             <h2 class="movie__title">{{title}}</h2>
@@ -11,6 +11,12 @@
                 <li>Directed by <span class="movie__director">{{director}}</span></li>
                 <li><span class="movie__tag">{{tag}}</span></li>
             </ul>
+        </div>
+        <div class="movie_caption">
+            <p class="movie__synopsis">
+                this is a test which should describe the content of the movie for people wwho want to know more.
+            </p>
+            <a href="#" class="movie__trailer"> watch trailer </a>
         </div>
     </div>
     </div>
