--- a/movie.mustache
+++ b/movie.mustache
@@ -2,8 +2,8 @@
 <figure>
     <img class="movie_img" src="{{thumbPath}}" alt="movie picture"/>
         <figcaption>
-            <p class="movie__synopsis">
-                this is a test which should describe the content of the movie for people wwho want to know more.
+            <p class="movie__synopsis small">
+                {{synopsis}}
             </p>
             <a href="#" class="movie__trailer"> watch trailer </a>
         </figcaption>
