--- a/movie.mustache
+++ b/movie.mustache
@@ -1,4 +1,4 @@
-<div class="movie">
+<div id="{{title}}" class="movie">
 <figure>
     <img class="movie_img" src="{{thumbPath}}" alt="movie picture"/>
         <figcaption>
