--- a/main.css
+++ b/main.css
@@ -150,7 +150,8 @@ figure {
   overflow: hidden;
 }
 
-figure:hover figcaption, figure:active figcaption{
+
+figure:focus figcaption, figure:focus figcaption{
   transform: translateY(-220px);
 }
 
@@ -206,15 +207,15 @@ figure::after {
 }
 
 
-@media (max-width: 460px) {
+@media (max-width: 500px) {
 
   .letter {
     font-size: 5rem;
   }
 
   img {
+    max-width: 100%;
     height: 100%;
-    width: 100%;
     object-fit: cover;
     aspect-ratio: unset;
     clip-path: unset;
@@ -224,7 +225,7 @@ figure::after {
   .container {
       height: 100vh;
       padding-top: 10px;
-      grid-auto-rows: 220px;
+      grid-auto-rows: 300px;
       gap: 0rem;
       overflow-y: scroll;
       scroll-snap-type: y mandatory; 
@@ -268,5 +269,13 @@ figure::after {
     bottom: 20;
     z-index: 1000;
   }
+  
+   
+  figure:focus figcaption, figure:focus figcaption{
+    transform: unset;
+  }
 
+  figure:hover::after {
+    transform: unset;
+  }
 }
