--- a/main.css
+++ b/main.css
@@ -1,91 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,400;0,500;0,600;0,700;1,100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-* { 
-    box-sizing: border-box;
-} 
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,400;0,500;0,600;0,700;1,100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+* {
+  box-sizing: border-box;
+}
 
 body {
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-    font-family: 'Barlow', sans-serif;
-    background-color: #151515;
-    color: #EBDBC2;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+  font-family: "Barlow", sans-serif;
+  background-color: #151515;
+  color: #ebdbc2;
 }
 
-img { 
-    width: 100%;
-    aspect-ratio: 1 /1 ;
-    object-fit: cover;
-    clip-path: polygon(8% 0, 100% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
+img {
+  width: 100%;
+  aspect-ratio: 1 /1;
+  object-fit: cover;
+  clip-path: polygon(8% 0, 100% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
 }
 
-h1,h2,h3,p,ul,figure {
-    padding: 0;
-    margin: 0;
+h1,
+h2,
+h3,
+p,
+ul,
+figure {
+  padding: 0;
+  margin: 0;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 li {
-    line-height: 0.7rem;
+  line-height: 0.7rem;
 }
 
-.container { 
-    padding-top: 10px;
-    width: 98%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(13.5rem,1fr));
-    gap: 0.8rem;
+.container {
+  padding-top: 10px;
+  width: 98%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(13.5rem, 1fr));
+  gap: 0.8rem;
 }
 
 .about {
   position: relative;
 }
 
-.about_hero_link{
-    position: absolute;
-    bottom: 10;
-    right: 0;
-    width: 3rem;
-    height: 3rem;
-    padding: 0.3rem;
-    border: 2px solid #EBDBC2;
-    line-height: 1;
-    text-align: center;
-    color: #F4533F
+.about_hero_link {
+  position: absolute;
+  bottom: 10;
+  right: 0;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.3rem;
+  border: 2px solid #ebdbc2;
+  line-height: 1;
+  text-align: center;
+  color: #f4533f;
 }
 
 .about_info_link {
-    position: absolute;
-    bottom: 10;
-    right: 0;
-    width: 3rem;
-    height: 3rem;
-    padding: 0.3rem;
-    border: 2px solid #F4533F;
-    line-height: 1;
-    text-align: center;
-    color: #EBDBC2;
+  position: absolute;
+  bottom: 10;
+  right: 0;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.3rem;
+  border: 2px solid #f4533f;
+  line-height: 1;
+  text-align: center;
+  color: #ebdbc2;
 }
 
-.hero{
-    position: relative;
-    color: #F4533F;
-    display: grid;
-    grid-template-columns: max-content 1fr;
-    font-weight: 500;
-    align-items: center;
+.hero {
+  position: relative;
+  color: #f4533f;
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  font-weight: 500;
+  align-items: center;
 }
-
 
 .movie__trailer {
   display: inline-block;
-  color: #EBDBC2;
-  border: 1px solid #EBDBC2;
+  color: #ebdbc2;
+  border: 1px solid #ebdbc2;
   text-transform: capitalize;
   font-size: 0.8rem;
   text-decoration: none;
@@ -101,31 +105,31 @@ li {
 }
 
 .small {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
-.bold { 
-  color: #F4533F;
+.bold {
+  color: #f4533f;
 }
 
 .letter {
-    font-size: 6.7rem;
-    font-weight:700;
-    writing-mode: vertical-rl;
-    text-transform: uppercase;
-    grid-column: 1 / 2;
-    line-height: 0.8;
+  font-size: 6.7rem;
+  font-weight: 700;
+  writing-mode: vertical-rl;
+  text-transform: uppercase;
+  grid-column: 1 / 2;
+  line-height: 0.8;
 }
 
 .follow {
-    font-size: 2.5rem;
-    font-weight:500;
-    font-weight: 600;
-    grid-column: 2 / 3;
+  font-size: 2.5rem;
+  font-weight: 500;
+  font-weight: 600;
+  grid-column: 2 / 3;
 }
 
 .end {
-    border-bottom: 4px solid #222;
+  border-bottom: 4px solid #222;
 }
 
 .movie {
@@ -140,7 +144,7 @@ figcaption {
   text-align: center;
 }
 
-.movie__trailer{
+.movie__trailer {
   margin-top: 10px;
   padding: 3px 10px;
 }
@@ -150,8 +154,8 @@ figure {
   overflow: hidden;
 }
 
-
-figure:focus figcaption, figure:focus figcaption{
+figure:hover figcaption,
+figure:hover figcaption {
   transform: translateY(-220px);
 }
 
@@ -163,51 +167,59 @@ figure::after {
   display: block;
   position: absolute;
   bottom: -190px;
-  content: '';
+  content: "";
   width: 100%;
   height: 80%;
-  background: linear-gradient(0deg, rgba(0, 0, 0, .8) 40%, rgba(0, 0, 0, .6) 70%,rgba(255, 255 ,255 , 0) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.8) 40%,
+    rgba(0, 0, 0, 0.6) 70%,
+    rgba(255, 255, 255, 0) 100%
+  );
   transition: all 0.5s;
 }
 
-
 .movie__header {
-    display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    padding-top: 0.1rem;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  padding-top: 0.1rem;
 }
 
 .movie__title {
-    line-height: 1.3rem;
-    text-transform: uppercase;
-    color: #F4533F;
+  line-height: 1.3rem;
+  text-transform: uppercase;
+  color: #f4533f;
 }
 
 .movie__year {
-    font-size: 0.7rem;
-    font-weight: 500;
+  font-size: 0.7rem;
+  font-weight: 500;
 }
 
-.movie__details{
-    font-family: 'Montserrat', sans-serif;
-    padding-top: 0.2rem;
-    font-size: 0.7rem;
-    font-weight: 400;
+.movie__details {
+  font-family: "Montserrat", sans-serif;
+  padding-top: 0.2rem;
+  font-size: 0.7rem;
+  font-weight: 400;
 }
 
-.movie__running, .movie__director, .movie__tag {
-    font-weight: 500;
+.movie__running,
+.movie__director,
+.movie__tag {
+  font-weight: 500;
 }
 
 .end {
-    display: grid;
-    color: #F4533F;
-    align-self: end;
+  display: grid;
+  color: #f4533f;
+  align-self: end;
 }
 
-
 @media (max-width: 500px) {
+  body {
+    height: 100%;
+  }
 
   .letter {
     font-size: 5rem;
@@ -221,14 +233,12 @@ figure::after {
     clip-path: unset;
   }
 
-
   .container {
-      height: 100vh;
-      padding-top: 10px;
-      grid-auto-rows: 300px;
-      gap: 0rem;
-      overflow-y: scroll;
-      scroll-snap-type: y mandatory; 
+    height: 100vh;
+    grid-auto-rows: 33%;
+    gap: 0rem;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
   }
 
   .hero {
@@ -239,12 +249,12 @@ figure::after {
     position: relative;
     scroll-snap-align: center;
   }
- 
+
   .movie__informations {
     width: 100%;
   }
 
-  .movie__header{
+  .movie__header {
     width: 100%;
     justify-content: space-between;
   }
@@ -257,25 +267,29 @@ figure::after {
     position: absolute;
     display: block;
     bottom: 0;
-    content: '';
+    content: "";
     width: 100%;
     height: 80%;
-    background: linear-gradient(0deg, rgba(0, 0, 0, .6) 50%, rgba(255, 255 ,255 , 0) 100%);
+    background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.6) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
   }
 
   .movie__informations {
     padding: 10px;
-    position: absolute; 
+    position: absolute;
     bottom: 20;
     z-index: 1000;
   }
-  
-   
-  figure:focus figcaption, figure:focus figcaption{
-    transform: unset;
+
+figure:hover figcaption, figure:hover figcaption {
+  transform: unset;
+}
+
+  .active > figure > figcaption {
+    transform: translateY(-320px);
   }
 
-  figure:hover::after {
-    transform: unset;
-  }
 }
