--- a/style.css
+++ b/style.css
@@ -1,33 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,400;0,500;0,600;0,700;1,100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
-* {
-  box-sizing: border-box;
+
+:root { 
+  --color-background: #151515;
+  --color-title: #f4533f;
+  --color-text: #ebdbc2;
+  --font-title: "Barlow", sans-serif;
+  --font-text: "Montserrat", sans-serif;
 }
 
 body {
-  padding: 0;
-  margin: 0;
   height: 100vh;
-  font-family: "Barlow", sans-serif;
-  background-color: #151515;
-  color: #ebdbc2;
+  font-family: var(--font-title);
+  background-color: var(--color-background);
+  color: var(--color-text);
 }
+
+
 
 img {
   width: 100%;
   aspect-ratio: 1 /1;
   object-fit: cover;
   clip-path: polygon(8% 0, 100% 0, 100% 0, 100% 100%, 0 100%, 0 9%);
-}
-
-h1,
-h2,
-h3,
-p,
-ul,
-figure {
-  padding: 0;
-  margin: 0;
 }
 
 ul {
@@ -216,7 +211,7 @@ figure::after {
   align-self: end;
 }
 
-@media (max-width: 500px) {
+@media (min-width: 500px) {
   body {
     height: 100%;
   }
