mobile navigation is ok with 50%

--- a/movie.mustache
+++ b/movie.mustache
@@ -1,4 +1,4 @@
-<div id="{{title}}" class="movie">
+<div id="{{title}}" class="card movie">
 <figure>
     <img class="movie_img" src="{{thumbPath}}" alt="movie picture"/>
         <figcaption>
@@ -8,7 +8,7 @@
             <a href="#" class="movie__trailer"> watch trailer </a>
         </figcaption>
     </figure>
-    <div class="movie__informations">
+    <div class="container movie__informations">
         <div class="movie__header">
             <h2 class="movie__title">{{title}}</h2>
             <p class="movie__year">{{year}}</p>
