--- a/movie.mustache
+++ b/movie.mustache
@@ -1,4 +1,4 @@
-<div id="{{title}}" class="card movie"e
+<div id="{{title}}" class="card movie">
 <figure class="movie__fig">
     <img class="movie__img" src="{{thumbPath}}" alt="movie picture"/>
         <figcaption>
@@ -8,7 +8,7 @@
             <a href="#" class="movie__trailer"> watch trailer </a>
         </figcaption>
     </figure>
-    <div class="movie__informations container">
+    <div class="movie__informations">
         <div class="movie__header">
             <h4 class="movie__title">{{title}}
             <span class="bold text_small">{{year}}</span></h4>
