--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,400;0,500;0,600;0,700;1,100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 :root {
   --color-background: #151515;
   --color-title: #f4533f;
@@ -75,10 +75,11 @@ main {
   scroll-snap-align: center;
 }
 
-.header, .footer {
+.header,
+.footer {
   display: flex;
   align-items: center;
-  padding-left: 2% ; 
+  padding-left: 2%;
 }
 
 .header > .hero,
@@ -131,12 +132,11 @@ main {
   font-size: 3rem;
   font-weight: 600;
 }
-
-
-
+.movie {
+  overflow: hidden;
+}
 .movie > .movie__fig {
   position: relative;
-  overflow: hidden;
   height: 100%;
 }
 
@@ -154,7 +154,7 @@ main {
   padding: 0 0.8rem;
   gap: 0.3rem;
   bottom: 5%;
-  z-index: 9999;
+  z-index: 1000;
   width: 100%;
 }
 
@@ -185,12 +185,12 @@ main {
 }
 
 .movie::after {
-  position: absolute;
   display: block;
+  position: absolute;
   bottom: 0;
   content: "";
   width: 100%;
-  height: 45%;
+  height: 40%;
   background: linear-gradient(
     0deg,
     rgba(0, 0, 0, 0.6) 50%,
@@ -199,17 +199,59 @@ main {
 }
 
 .movie.expanded::after {
-  transform: translateY(-200px);
+  top: 0;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  animation: fadeIn 0.9s;
 }
 
-.movie.expanded figcaption{
-  transform: translateY(-500px);
+figcaption {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.2rem;
+  z-index: 1000;
 }
 
-/* Phone-landscape */
-@media(min-height: 480px) {
+.movie.expanded figcaption {
+  top: 30%;
+  transform: translateY(-50%);
+  animation: fadeIn 0.9s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.movie__synopsis {
+  text-align: center;
+  padding: 0 1rem;
+  font-size: 0.8rem;
+}
+
+.movie__trailer {
+  width: 40%;
+  padding: 0.4rem 0;
+  color: var(--color-text);
+  border: 2px solid var(--color-title);
+  text-transform: uppercase;
+  font-family: var(--font-title);
+  font-weight: 500;
+  transform: skewY(-6deg);
+  font-size: 1rem;
+  text-align: center;
+}
+
+@media (min-width: 480px) {
   main {
     grid-template-columns: repeat(auto-fit, minmax(16.5rem, 1fr));
+    grid-auto-rows: 48%;
     gap: 0.4rem;
   }
 
@@ -227,72 +269,32 @@ main {
     line-height: 1;
     text-align: center;
   }
-}
 
+  .movie:hover::after {
+    top: 0;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    animation: fadeIn 0.9s;
+  }
 
+  .movie:hover figcaption {
+    top: 30%;
+    transform: translateY(-50%);
+    animation: fadeIn 0.9s;
+  }
 
+  .movie__trailer {
+    width: 50%;
+    font-size: 0.8rem;
+  }
 
-  /* figure:hover figcaption, */
-  /* figure:hover figcaption { */
-  /*   transform: unset; */
-  /* } */
+  .movie__synopsis {
+    text-align: center;
+    padding: 0 1rem;
+    font-size: 0.8rem;
+  }
 
-  /* .active > figure > figcaption { */
-  /*   transform: translateY(-320px); */
-  /* } */
-
-  /* .movie__trailer { */
-  /*   display: inline-block; */
-  /*   color: #ebdbc2; */
-  /*   border: 1px solid #ebdbc2; */
-  /*   text-transform: capitalize; */
-  /*   font-size: 0.8rem; */
-  /*   text-decoration: none; */
-  /*   border-radius: 3px; */
-  /* } */
-
-  /* .movie__synopsis { */
-  /*   padding: 0 20px; */
-  /* } */
-
-  /* figcaption { */
-  /*   bottom: -190px; */
-  /*   position: absolute; */
-  /*   z-index: 1000; */
-  /*   transition: all 0.5s; */
-  /*   text-align: center; */
-  /* } */
-
-  /* .movie__trailer { */
-  /*   margin-top: 10px; */
-  /*   padding: 3px 10px; */
-  /* } */
-
-  /* figure:hover figcaption, */
-  /* figure:hover figcaption { */
-  /*   transform: translateY(-220px); */
-  /* } */
-
-  /* figure:hover::after { */
-  /*   transform: translateY(-190px); */
-  /* } */
-
-  /* figure::after { */
-  /*   display: block; */
-  /*   position: absolute; */
-  /*   bottom: -190px; */
-  /*   content: ""; */
-  /*   width: 100%; */
-  /*   height: 80%; */
-  /*   background: linear-gradient( */
-  /*     0deg, */
-  /*     rgba(0, 0, 0, 0.8) 40%, */
-  /*     rgba(0, 0, 0, 0.6) 70%, */
-  /*     rgba(255, 255, 255, 0) 100% */
-  /*   ); */
-  /*   transition: all 0.5s; */
-  /* } */
-  /* figcaption { */
-  /*   display: none; */
-  /* } */
+  .movie__more-info {
+    display: none;
+  }
 }
