some cleanup in my css

--- a/movie.mustache
+++ b/movie.mustache
@@ -2,7 +2,7 @@
 
   <figure class="movie__fig">
     <img class="movie__img" src="{{thumbPath}}" alt="movie picture"/>
-    <figcaption>
+    <figcaption class="movie__caption">
       <p class="movie__synopsis small"> {{synopsis}} </p>
       <a href="#" class="movie__trailer"> watch trailer </a>
     </figcaption>
@@ -10,8 +10,8 @@
 
   <div class="movie__informations">
       <div class="movie__header">
-          <h4 class="movie__title">{{title}}
-          <span class="bold text_small">{{year}}</span></h4>
+          <h2 class="movie__title">{{title}}
+          <span class="bold text_small">{{year}}</span></h2>
       </div>
       <div class="movie__details_panel">
         <div class="movie__details text_small">
